[tool.poetry]
name = "renderreflexproject"
version = "0.1.0"
description = ""
authors = ["Jose Luis Manon <joseluismanonrosario@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
reflex = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"